[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-caching"
version = "1.0.10"
authors = [{ "name" = "Stefano Fusai", "email" = "stefanofusai@gmail.com" }]
description = "A simple package to handle views caching in Django Rest Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4",
    "django",
    "django-redis",
    "djangorestframework",
    "lxml",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/stefanofusai/drf-caching"
Repository = "https://github.com/stefanofusai/drf-caching"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "ARG002", "COM812", "D100", "D104", "D203", "D213", "ISC001", "TD001", "TD002", "TD003", "TRY003"]
