[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-caching"
version = "1.1.1"
authors = [{ "name" = "Stefano Fusai", "email" = "stefanofusai@gmail.com" }]
description = "Handle views caching in Django Rest Framework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4",
    "django",
    "django-redis",
    "djangorestframework",
    "lxml",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/stefanofusai/drf-caching"
Repository = "https://github.com/stefanofusai/drf-caching"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Bad rules
    "COM812",
    "D203",
    "D212",
    "E501",
    "FA102",
    "FIX",
    "ISC001",
    "PLR2004",
    "RUF012",
    "S101",
    "S311",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    # Project-specific rules
    "ANN401",
    "ARG002",
    "D100",
    "D104",
]
