[project]
name = "drf-caching"
version = "1.4.1"
description = "Handle views caching in Django Rest Framework."
readme = "README.md"
authors = [
    { name = "Stefano Fusai", email = "stefanofusai@gmail.com" }
]
maintainers = [
    { name = "Stefano Fusai", email = "stefanofusai@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.3",
    "django==5.1.4",
    "django-redis==5.4.0",
    "djangorestframework==3.15.2",
    "lxml==5.3.0",
    "pydantic==2.10.4",
]

[project.urls]
Homepage = "https://github.com/stefanofusai/drf-caching"
Repository = "https://github.com/stefanofusai/drf-caching"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
development = [
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "ruff==0.8.2",
]

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Bad rules
    "COM812",
    "D203",
    "D212",
    "E501",
    "FA102",
    "FIX",
    "ISC001",
    "PLR2004",
    "RUF012",
    "S101",
    "S311",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    # Project-specific rules
    "ANN401",
    "ARG002",
    "D100",
    "D104",
]

[tool.ruff.lint.per-file-ignores]
"src/drf_caching/sentinels.py" = ["ALL"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
